added email settings to vikunja

--- a/svchost/apps/docker-compose.yml
+++ b/svchost/apps/docker-compose.yml
@@ -125,6 +125,10 @@ services:
       - VIKUNJA_DATABASE_PASSWORD=${VIK_DB_PASS}
       - VIKUNJA_SERVICE_JWTSECRET=${VIK_JWT}
       - VIKUNJA_SERVICE_FRONTENDURL=${VIK_URL}
+      - VIKUNJA_MAILER_ENABLE=1
+      - VIKUNJA_MAILER_HOST=192.168.1.150
+      - VIKUNJA_MAILER_PORT=8025
+      - VIKUNJA_MAILER_SKIPTLSVERIFY=true
     ports:
       - 3456:3456
     volumes:
