--- a/svchost/media/docker-compose.yml
+++ b/svchost/media/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     image: jlesage/handbrake:latest
     container_name: handbrake
     environment:
-      - AUTOMATED_CONVERSION_PRESET=General/Very Fast 1080p30
+      - AUTOMATED_CONVERSION_PRESET=General/Fast 1080p30
       - AUTOMATED_CONVERSION_FORMAT=mp4
       - AUTOMATED_CONVERSION_OUTPUT_SUBDIR=SAME_AS_SRC
       - AUTOMATED_CONVERSION_PRESET_2=General/Very Fast 720p30
