--- a/core/docker-compose.yml
+++ b/core/docker-compose.yml
@@ -61,6 +61,30 @@ services:
     command: -vv /etc/mailrise.conf
     restart: unless-stopped
 
+  diun:
+    image: crazymax/diun:latest
+    container_name: diun
+    network_mode: "bridge"
+    command: serve
+    environment:
+      - TZ=${TZ}
+      - LOG_LEVEL=info
+      - LOG_JSON=false
+      - DIUN_WATCH_WORKERS=20
+      - DIUN_WATCH_SCHEDULE=0 23 * * *
+      - DIUN_PROVIDERS_DOCKER=true
+      - DIUN_PROVIDERS_DOCKER_WATCHBYDEFAULT=true
+      - DIUN_PROVIDERS_DOCKER_WATCHSTOPPED=true
+      - DIUN_NOTIF_GOTIFY_ENDPOINT=${GOTIFY_ENDPOINT}
+      - DIUN_NOTIF_GOTIFY_TOKEN=${GOTIFY_TOKEN}
+      - DIUN_WATCH_FIRSTCHECKNOTIF=true
+      - DIUN_WATCH_HEALTHCHECKS_BASEURL=${HEALTHCHECKS_URL}
+      - DIUN_WATCH_HEALTHCHECKS_UUID=${HEALTHCHECKS_UUID}
+    volumes:
+      - diun-data:/data
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
+
 volumes:
   npm-data:
     name: npm-data
@@ -68,3 +92,5 @@ volumes:
     name: mariadb-data
   portainer-data:
     name: portainer-data
+  diun-data:
+    name: diun-data
