--- a/media/docker-compose.yml
+++ b/media/docker-compose.yml
@@ -1,6 +1,28 @@
 ---
 version: "2.1"
 services:
+  diun:
+    image: crazymax/diun:latest
+    container_name: diun
+    network_mode: "bridge"
+    command: serve
+    environment:
+      - TZ=${TZ}
+      - LOG_LEVEL=info
+      - LOG_JSON=false
+      - DIUN_WATCH_WORKERS=20
+      - DIUN_WATCH_SCHEDULE=0 23 * * *
+      - DIUN_PROVIDERS_DOCKER=true
+      - DIUN_PROVIDERS_DOCKER_WATCHBYDEFAULT=true
+      - DIUN_PROVIDERS_DOCKER_WATCHSTOPPED=true
+      - DIUN_NOTIF_GOTIFY_ENDPOINT=${GOTIFY_ENDPOINT}
+      - DIUN_NOTIF_GOTIFY_TOKEN=${GOTIFY_TOKEN}
+      - DIUN_WATCH_FIRSTCHECKNOTIF=true
+    volumes:
+      - diun-data:/data
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
+
   jellyfin:
     image: jellyfin/jellyfin:latest
     network_mode: "bridge"
@@ -113,6 +135,8 @@ services:
     restart: unless-stopped
 
 volumes:
+  diun-data:
+    name: diun-data
   jellyfin-data:
     name: jellyfin-data
   jellyfin-cache:
