--- a/media/docker-compose.yml
+++ b/media/docker-compose.yml
@@ -53,6 +53,19 @@ services:
       - "diun.enable=false"
     restart: unless-stopped
 
+  flaresolverr:
+    # DockerHub mirror flaresolverr/flaresolverr:latest
+    image: ghcr.io/flaresolverr/flaresolverr:latest
+    container_name: flaresolverr
+    environment:
+      - LOG_LEVEL=${LOG_LEVEL:-info}
+      - LOG_HTML=${LOG_HTML:-false}
+      - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
+      - TZ=$TZ
+    ports:
+      - "${PORT:-8191}:8191"
+    restart: unless-stopped
+
   handbrake:
     image: jlesage/handbrake:latest
     container_name: handbrake
