--- a/media/docker-compose.yml
+++ b/media/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     restart: unless-stopped
 
   jackett:
-    image: linuxserver/jackett:v0.21.188-ls109
+    image: lscr.io/linuxserver/jackett:latest 
     container_name: jackett
     environment:
       - PUID=1000
@@ -62,12 +62,10 @@ services:
     image: ghcr.io/flaresolverr/flaresolverr:latest
     container_name: flaresolverr
     environment:
-      - LOG_LEVEL=${LOG_LEVEL:-info}
-      - LOG_HTML=${LOG_HTML:-false}
       - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
       - TZ=$TZ
     ports:
-      - "${PORT:-8191}:8191"
+      - 8191:8191
     restart: unless-stopped
 
   handbrake:
