--- a/apps/docker-compose.yml
+++ b/apps/docker-compose.yml
@@ -224,6 +224,16 @@ services:
       timeout: 5s
       retries: 5
     restart: unless-stopped
+  
+  baikal:
+    image: ckulka/baikal:nginx
+    container_name: baikal
+    ports:
+      - 4080:80
+    volumes:
+      - ${DOCKER_APP_DATA}/baikal/config:/var/www/baikal/config
+      - ${DOCKER_APP_DATA}/baikal/Specific:/var/www/baikal/Specific
+    restart: unless-stopped
 
 
 volumes:
