--- a/media/docker-compose.yml
+++ b/media/docker-compose.yml
@@ -41,38 +41,12 @@ services:
       - ${NMEDIA}:/media
     restart: unless-stopped
 
-  jackett:
-    image: lscr.io/linuxserver/jackett:latest 
-    container_name: jackett
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=${TZ}
-    ports:
-      - 9117:9117
-    volumes:
-      - jackett-data:/config
-      - ${NDOWNLOADS}/seedbox:/downloads
-    labels:
-      - "diun.enable=false"
-    restart: unless-stopped
-
-  flaresolverr:
-    # DockerHub mirror flaresolverr/flaresolverr:latest
-    image: ghcr.io/flaresolverr/flaresolverr:latest
-    container_name: flaresolverr
-    environment:
-      - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
-      - TZ=$TZ
-    ports:
-      - 8191:8191
-    restart: unless-stopped
-
   handbrake:
     image: jlesage/handbrake:latest
     container_name: handbrake
     environment:
-      - AUTOMATED_CONVERSION_PRESET=CQ22 1080p30
+      # - AUTOMATED_CONVERSION_PRESET=CQ22 1080p30
+      - AUTOMATED_CONVERSION_PRESET='H.265 MP4 1080p30'
       - AUTOMATED_CONVERSION_FORMAT=mp4
       - AUTOMATED_CONVERSION_OUTPUT_SUBDIR=SAME_AS_SRC
       - AUTOMATED_CONVERSION_PRESET_2=CQ20 720p30
@@ -114,7 +88,7 @@ services:
     restart: unless-stopped
 
   calibre:
-    image: linuxserver/calibre:v6.20.0-ls223
+    image: lscr.io/linuxserver/calibre:latest
     container_name: calibre
     # security_opt:
       # - seccomp:unconfined #optional
@@ -134,7 +108,7 @@ services:
     restart: unless-stopped
 
   calibre-web:
-    image: linuxserver/calibre-web:0.6.20-ls214
+    image: lscr.io/linuxserver/calibre-web:latest
     container_name: calibre-web
     environment:
       - PUID=1000
