--- a/nextpvr/docker-compose.yml
+++ b/nextpvr/docker-compose.yml
@@ -42,9 +42,9 @@ services:
       - PGID=1000
       - TZ=${TZ}
     volumes:
-      - /home/vps_admin/nextpvr/config:/config
-      - /home/vps_admin/nextpvr/recordings:/recordings
-      - /home/vps_admin/nextpvr/buffer:/buffer
+      - ${DOCKER_APP_DATA}/nextpvr/config:/config
+      - ${HOME}/nextpvr/recordings:/recordings
+      - ${HOME}/nextpvr/buffer:/buffer
     ports:
       - 8866:8866
     restart: unless-stopped
